add reply route
